@@ -224,8 +224,8 @@ test-github: ## run github workflow actions
 	act -P ubuntu-latest=ghcr.io/catthehacker/ubuntu:act-latest --matrix os:ubuntu-latest
 
 .PHONY: typecheck
-typecheck:	## run pytype
-	pytype patoolib
+typecheck:	## run the ty type checker
+	ty check
 
 ############ Documentation ############
 
